--- a/content/post/2021-04-21-a-blueprint-of-red-flag-alerts-using-adjusted-earnings-data/index.Rmd
+++ b/content/post/2021-04-21-a-blueprint-of-red-flag-alerts-using-adjusted-earnings-data/index.Rmd
@@ -8,7 +8,7 @@ tags:
   - XBRL
 ---
 
-![Photo by \<a href="[https://unsplash.com/\\\@biblioteca_valenciana?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"\\](https://unsplash.com/\@biblioteca_valenciana?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText%22\){.uri}\>Biblioteca Valenciana Nicolau Primitiu\</a\> on \<a href="[https://unsplash.com/s/photos/blimp?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"\\](https://unsplash.com/s/photos/blimp?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText%22\){.uri}\>Unsplash\</a\>](images/biblioteca-valenciana-nicolau-primitiu-QOPkIw4e52k-unsplash.jpg){width="600"}
+![Photo by Valenciana Nicolau Primitiu via Unsplash](images/biblioteca-valenciana-nicolau-primitiu-QOPkIw4e52k-unsplash.jpg){width="600"}
 
 # Introduction
 
@@ -22,7 +22,7 @@ Though contrary to our goal to stick with mainly open source data in this blog, 
 
 Last month, we learned of NC from their joint paper [Distribution Is Not Enough](https://www.newconstructs.com/wp-content/uploads/2021/03/Investment-Industry-Opinion-Paper-Distribution-Is-Not-Enough.pdf). Having operated since 2003, the accounting research firm had gradually built an impressive process combining man and machine, which has enabled them to scale up and reduce errors, which normally might be expected when conducting financial analysis on so many companies. This data set is in a different league from what we had seen with SEC Edgar, Financial Modeling Prep or SECDatabase.com. NC has gone through every earnings report since the late 1990s and adjusted annual 10-K's for items left off the face of the balance sheets and income statements, but included in the MD&A, footnotes and cash flow statements. They also have similarly adjusted quarterly data since 2013. We would advise anybody looking to learn about this topic to read their [Learn From Value-Investing Experts](https://www.newconstructs.com/education/), and particularly the section about "Accounting Fixes", it is like a textbook on its own. They also offer many excellent webinars on the subject.
 
-A team of Harvard and MIT researchers who had access to NC's data recently published [Core Earnings: New Data and Evidence](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3467814) in the Journal of Financial Economics verifying the accuracy in a sample of reports and comparing the overall quality to Compustat. Though there are armies of analysts pouring over financial statements, they also demonstrating that NC's adjustments were not really discounted by the market (finding an 8% excess return in back tests when comparing the companies with the most to the least adjustments). By the researchers count, NC found that approximately 30% of non-core items or almost 20% of net earnings over the period where non-core items dispersed throughout the 10-K, on and off the face of the income statement. They estimated that roughly half of these items on average were off the income statement (certainly a material amount), and found that the quantity and magnitude of such items had been increasing over time. The researchers found that NC's core earnings had a significantly higher year-to-year persistence (ie: future earnings were more highly correlated with past periods once non-recurring items had been removed), and hence represent a better baseline in any model.
+A team of Harvard and MIT researchers, who had access to NC's data, recently published [Core Earnings: New Data and Evidence](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3467814) in the Journal of Financial Economics verifying the accuracy in a sample of reports and comparing the overall quality to Compustat. Though there are armies of analysts pouring over financial statements, they also demonstrating that NC's adjustments were not really discounted by the market (finding an 8% excess return in back tests when comparing the companies with the most to the least adjustments). By the researchers count, NC found that approximately 30% of non-core items or almost 20% of net earnings over the period where non-core items dispersed throughout the 10-K, on and off the face of the income statement. They estimated that roughly half of these items on average were off the income statement (certainly a material amount), and found that the quantity and magnitude of such items had been increasing over time. The researchers found that NC's core earnings had a significantly higher year-to-year persistence (ie: future earnings were more highly correlated with past periods once non-recurring items had been removed), and hence represent a better baseline in any model.
 
 Mr. Gulliver never outlined how he cleaned his data although he did mention a service called Simplystocks, which was purchased by S&P Global Intelligence in 2003. The main comparison used in the Harvard/MIT paper were with Compustat. In this post, we will outline the model we built as if we would be able to back test Mr. Gulliver's "red flags" (using NC's superior data). We found that the NC's variables as shown in their [Data Feeds & Dictionaries](https://client.newconstructs.com/nc/documentation/data-feed.htm). Without the access to the data, we thought of dropping the post, but having spent the time to do the research, we wanted to share the ideas and information with others who might have greater resources than ours. This post will be a walk-through of what a process like this would look like in hopes we one day get access to similar data.
 
