--- a/content/post/2021-04-21-a-blueprint-of-red-flag-alerts-using-adjusted-earnings-data/index.Rmd
+++ b/content/post/2021-04-21-a-blueprint-of-red-flag-alerts-using-adjusted-earnings-data/index.Rmd
@@ -32,7 +32,7 @@ In the best of circumstances, it has been challenging predicting winners and los
 
 [![Source: Connected Papers](images/Screen%20Shot%202021-04-29%20at%2012.03.43%20PM.png "Mulford's "Financial Numbers Game" a lonely academic endeavor")](https://www.connectedpapers.com/main/d6861aa68adfc861fafa2a90c51771d6e7fce6f7/The-Financial-Numbers-Game-Detecting-Creative-Accounting-Practices/graph)
 
-The most recent of these sources is almost 20 years old at a time when arguably it should be most relevant (more than a decade into an historic bull market). When we look at it in this fantastic new tool called [Connected Papers](https://www.connectedpapers.com/main/d6861aa68adfc861fafa2a90c51771d6e7fce6f7/The-Financial-Numbers-Game-Detecting-Creative-Accounting-Practices/graph), we see that Mulford's work stands completely on its own with no connections and among other ancient papers. We could speculate about why this approach to investing feels so out of favor at a time when data mining would seem to be at the top of mind. In the current environment, as seen after other extended bull markets, there is the feeling that people are more willing to invest in concepts and with less concern for future cash generation. But, this trend has been increasing for more than two decades, even prior to the GFC. It could be a bubble, but it also correspond with the shift of firm's investment spending from fixed and measurable to internally-generated intangible assets as the Sparkline Capital below shows this clearly. In a future post, we will explore this possibility at greater length.
+The most recent of these sources is almost 20 years old at a time when arguably it should be most relevant (more than a decade into an historic bull market). When we look at it in this fantastic new tool called [Connected Papers](https://www.connectedpapers.com/main/d6861aa68adfc861fafa2a90c51771d6e7fce6f7/The-Financial-Numbers-Game-Detecting-Creative-Accounting-Practices/graph) (graphic above), we see that Mulford's 2002 book stands completely on its own with no connections and among other ancient papers. We could speculate about why this approach to investing feels so out of favor when data mining would seem to be at the top of mind. In the current environment, as seen after other extended bull markets, there is the feeling that people are more willing to invest in concepts and with less concern for future cash generation. But, this trend has been increasing for more than two decades, even prior to the GFC. It could be a bubble, but it also correspond with the shift of firm's investment spending from fixed and measurable to internally-generated intangible assets as Sparkline Capital showed in the graphic below from their recent [Investing in the Intangible Economy](Investing in the Intangible Economy)). In a future post, we will explore this possibility at greater length.
 
 ![](images/Screen%20Shot%202021-04-23%20at%205.17.09%20PM.png)
 
